--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,6 +24,21 @@ services:
     volumes:
       - "./webApp:/home/app/site"
 
+  selenium_scrapper:
+    image: python-selenium
+    tty: true
+    depends_on:
+      - selenium
+    volumes:
+      - "./selenium_scrapper:/home/app"
+
+  selenium:
+    image: selenium/standalone-chrome
+    shm_size: "2g"
+    ports:
+      - 4444:4444
+      - 7900:7900
+
 #  database:
 #    image: mysql
   broker:
